--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.1
   url_launcher: ^5.5.3
+  provider: ^4.3.2+2
+  
 
 dev_dependencies:
   flutter_test:
